v 2.0.0
=======
Rename `astrapy.constants.SortDocuments` to `SortMode` (keeping the old name as an alias)
Add `source_model` parameter to create_collection methods
All the client/admin/database/table/collection classes have api_options parameter in their with_options/to_[a]sync method
Payloads are not encoded to ASCII anymore for HTTP requests.
Renamed collection-specific exceptions:
    - 'InsertManyException' ==> `CollectionInsertManyException`
    - 'DeleteManyException' ==> `CollectionDeleteManyException`
    - 'UpdateManyException' ==> `CollectionUpdateManyException`
Improved string representation of DataAPIResponseException cases with multiple error descriptors
Introduced `InvalidEnvironmentException` for operations invalid on some Data API environments.
The following info methods are made async (= awaitable): `AsyncDatabase.info`, `AsyncDatabase.name`, `AsyncCollection.info`, `AsyncTable.info`
Collections default to using custom types for lossless and full-range expression of database content.
    - e.g. instead of 'datetime.datetime', instances of `DataAPITimestamp` are returned
    - Exception: numbers are treated by default as ints and floats. To have them all Decimal, set serdes_option.use_decimals_in_collections to True.
    - Use the options' serdes_option to opt out and revert to non-custom data types
Renamed (collection-specific) "Result" classes like this:
    - 'DeleteResult' => `CollectionDeleteResult`
    - 'InsertOneResult' => `CollectionInsertOneResult`
    - 'InsertManyResult' => `CollectionInsertManyResult`
    - 'UpdateResult' => `CollectionUpdateResult`
Database (and AsyncDatabase): added a `.region` property
Database info: changed class name and attributes of `AstraDBAdminDatabaseInfo` (former 'AdminDatabaseInfo') and `AstraDBDatabaseInfo` (former 'DatabaseInfo')
Introduced `DataAPIVector` class (Iterable, Sequence): this also offers better control over vector binary serialization
Collections are optionally typed: